Bug 1255378 - fix getCSSValuesForProperty for box-shadow and text-shadow; r=heycam,jryans

This fixes InspectorUtils.getCSSValuesForProperty to return the
correct values for box-shadow and text-shadow.  It also takes a small
step toward the goal of getting rid of
InspectorUtils.cpp:PropertySupportsVariant, in favor of having all
variants listed in nsCSSPropList.h.

MozReview-Commit-ID: Dwh5s0IvYTX